Adding focus state and improving modal interactivity

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <div class="post__info">
             <p class="post__number">01</p>
-            <h2 class="post__title">Reviving Retro PCs</h2>
+            <h2 tabindex="0" class="post__title">Reviving Retro PCs</h2>
             <p class="post__description">
               What happens when old PCs are given modern upgrades?
             </p>
@@ -116,7 +116,7 @@
           </div>
           <div class="post__info">
             <p class="post__number">02</p>
-            <h2 class="post__title">Top 10 Laptops of 2022</h2>
+            <h2 tabindex="0" class="post__title">Top 10 Laptops of 2022</h2>
             <p class="post__description">
               Our best picks for various needs and budgets.
             </p>
@@ -131,7 +131,7 @@
           </div>
           <div class="post__info">
             <p class="post__number">03</p>
-            <h2 class="post__title">The Growth of Gaming</h2>
+            <h2 tabindex="0" class="post__title">The Growth of Gaming</h2>
             <p class="post__description">
               How the pandemic has sparked fresh opportunities.
             </p>
